cmake_minimum_required(VERSION 3.3)
project(xv6_public)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    asm.h
    bio.c
    bootasm.S
    bootmain.c
    buf.h
    BUGS
    cat.c
    console.c
    cuth
    date.h
    defs.h
    dot-bochsrc
    echo.c
    elf.h
    entry.S
    entryother.S
    exec.c
    fcntl.h
    file.c
    file.h
    forktest.c
    fs.c
    fs.h
    gdbutil
    grep.c
    ide.c
    init.c
    initcode.S
    ioapic.c
    kalloc.c
    kbd.c
    kbd.h
    kernel.ld
    kill.c
    lapic.c
    LICENSE
    ln.c
    log.c
    ls.c
    main.c
    Makefile
    memide.c
    memlayout.h
    mkdir.c
    mkfs.c
    mmu.h
    mp.c
    mp.h
    Notes
    param.h
    picirq.c
    pipe.c
    pr.pl
    printf.c
    printpcs
    proc.c
    proc.h
    README
    rm.c
    runoff
    runoff.list
    runoff.spec
    runoff1
    sh.c
    show1
    sign.pl
    sleep1.p
    spinlock.c
    spinlock.h
    spinp
    stat.h
    stressfs.c
    string.c
    swtch.S
    symlink.patch
    syscall.c
    syscall.h
    sysfile.c
    sysproc.c
    timer.c
    toc.ftr
    toc.hdr
    trap.c
    trapasm.S
    traps.h
    TRICKS
    types.h
    uart.c
    ulib.c
    umalloc.c
    user.h
    usertests.c
    usys.S
    vectors.pl
    vm.c
    wc.c
    x86.h
    zombie.c cm.c MyStructs.h counter.c)
set(PROJECT_BINARY_DIR /home/danial/Desktop/OS/xv6_clone/xv6-public)

add_executable(xv6_public ${SOURCE_FILES})

#add_custom_target(xv6_public COMMAND make -C ${xv6_public_SOURCE_DIR}
#        CLION_EXE_DIR=${PROJECT_BINARY_DIR})